--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,9 @@ title: Publications
 <h2>Posters and Presentatations</h2>
 
 <ul>
+  <li><a href="http://www.slideee.com/slide/from-baleen-to-cleft-palate-an-ontological-exploration-of-evolution-and-disease">From baleen to cleft palate: an ontological exploration of evolution and disease</a> Melissa Haendel, Keynote,
+  Bio-Ontologies 2014</li>
+
   <li><a href="http://www.slideshare.net/hlapp/cshals-2014-keynote-31803361">Semantics
   of and for the diversity of life:  Opportunities and perils of
       trying to reason on the frontier</a> Hilmar Lapp, Keynote,
