--- a/downloads.html
+++ b/downloads.html
@@ -13,7 +13,8 @@ title: Uberon Downloads
 </ul>
 
 
-<h2 id="core">Core Ontology</h2>
+<a id="core"></a>
+<h2>Core Ontology</h2>
 
 <h3>Extended Version</h3>
 
@@ -43,11 +44,11 @@ title: Uberon Downloads
   OBO Format: <a href="http://purl.obolibrary.org/obo/uberon.obo">uberon.obo</a>
 </p>
 
-
-<h2 id="subsets">Subsets</h2>
+<a id="subsets"></a>
+<h2>Subsets</h2>
 
 <p>
-  Dufferent kinds of subsets are available.
+  Different kinds of subsets are available.
   <ul>
     <li>
       Taxon subsets exclude any classes not relevant for a
@@ -107,7 +108,8 @@ title: Uberon Downloads
 </p>
 
 
-<h2 id="bridge">Anatomical Bridging Ontologies</h2>
+<a id="bridge"></a>
+<h2>Anatomical Bridging Ontologies</h2>
 
 <p>
   Anatomical Bridging ontologies consist of OWL axioms that connect
@@ -138,7 +140,8 @@ title: Uberon Downloads
     {% endfor %}
 </ul>
 
-<h2 id="multiont">Combined Multispecies Ontologies</h2>
+<a id="multiont"></a>
+<h2>Combined Multispecies Ontologies</h2>
 
 <p>
 </p>
@@ -232,4 +235,24 @@ species-specific classes. Note the composite ontologies also merge in all of the
   <a href="http://purl.obolibrary.org/obo/uberon/bridge/">uberon/bridge</a>
   folder contains all collected-X ontologies.
   
+</p>
+
+<a id="data"></a>
+<h2>Data annotated using Uberon</h2>
+
+<p>
+Uberon is currently being used for diverse types of data annotation,
+from evolutionary phenotype data to description of samples in next-gen
+sequencing projects. We currently do not provide an aggregated
+download of all this data. Please visit
+the <a href="/about/adopters.html">adopters</a> page for details on
+how to download individual datasets.
+</p>
+
+<p>
+Uberon can also be used to integrate data provided by groups that do
+not explicitly adope Uberon. For example, data from annotated using
+the MGI adult mouse ontology can be integrated with data from the
+Allen Brain Atlas by using the two
+corresponding <a href="#bridge">bridge</a> ontologies.
 </p>
