--- a/downloads.html
+++ b/downloads.html
@@ -194,7 +194,7 @@ species-specific classes. Note the composite ontologies also merge in all of the
       <td> 
         <a href="http://purl.obolibrary.org/obo/uberon/composite-metazoan.owl">.owl</a>
       </td>
-      <td> MA, EHDAA2, ZFA, XAO, CL, FBbt, WBbt
+      <td> MA, EHDAA2, ZFA, XAO, CL, FBbt, WBbt, PORO, CTENO, CEPH
       </td>
     </tr>
     <tr>
@@ -206,7 +206,7 @@ species-specific classes. Note the composite ontologies also merge in all of the
       <td> 
         n/a
       </td>
-      <td> MA, EHDAA2, ZFA, XAO, CL, FBbt, WBbt
+      <td> MA, EHDAA2, ZFA, XAO, CL, FBbt, WBbt, PORO, CTENO, CEPH
       </td>
     </tr>
   </tbody>
