--- a/publications.html
+++ b/publications.html
@@ -10,6 +10,30 @@ title: Publications
    ontology</a> Mungall, C. J., Torniai, C., Gkoutos, G. V., Lewis, S. E., and
   Haendel, M. A. (2012) <i>Genome Biology 13, R5</i>. <a href="http://www.ncbi.nlm.nih.gov/pubmed/22293552">PMID:22293552</a>
 </p>
+<p>
+
+<a href="http://www.jbiomedsem.com/content/5/1/21">Unification of multi-species vertebrate anatomy ontologies for comparative biology in Uberon</a>
+Haendel, Melissa A;
+Balhoff, James P;
+Bastian, Frederic B;
+Blackburn, David C;
+Blake, Judith A;
+Bradford, Yvonne;
+Comte, Aurelie;
+Dahdul, Wasila M;
+Dececchi, Thomas A;
+Druzinsky, Robert E;
+Hayamizu, Terry F;
+Ibrahim, Nizar;
+Lewis, Suzanna E;
+Mabee, Paula M;
+Niknejad, Anne;
+Robinson-Rechavi, Marc;
+Sereno, Paul C;
+Mungall, Christopher J
+(2014)
+<i>Journal of Biomedical Semantics</i>, 5(1), 21. doi:10.1186/2041-1480-5-21
+</p>
 
 <h2>Google Scholar</h2>
 
@@ -34,6 +58,9 @@ Papers in the <a href="http://www.mendeley.com/groups/1578833">Uberon Mendeley G
 <h2>Posters and Presentatations</h2>
 
 <ul>
+  <li><a href="http://www.slideshare.net/cmungall/giga2-structuredphenotypes">Structuring Phenotype Data for Invertebrate Genomes</a> - Chris Mungall,
+  GIGA2 2015</li>
+
   <li><a href="http://www.slideee.com/slide/from-baleen-to-cleft-palate-an-ontological-exploration-of-evolution-and-disease">From
   baleen to cleft palate: an ontological exploration of evolution and
   disease</a> - Melissa Haendel, Keynote,
