Update Phenoscape URL

--- a/browse/phenoscape.html
+++ b/browse/phenoscape.html
@@ -4,7 +4,7 @@ title: Browse
 ---
 
 <div>
-  <iframe src="http://rdf.phenoscape.org/"
+  <iframe src="http://kb.phenoscape.org/"
              frameborder="0"
              height="800"
              scrolling="auto"
