added info on releases

--- a/downloads.html
+++ b/downloads.html
@@ -6,12 +6,27 @@ title: Uberon Downloads
 <h2>Downloads</h2>
 
 <ul>
-  <li><a href="#core">Donwload Core</a></li>
+  <li><a href="#releases">Releases</a></li>
+  <li><a href="#core">Download Core</a></li>
   <li><a href="#subsets">Download a Subset</a></li>
   <li><a href="#bridge">Download Bridging Axioms</a></li>
   <li><a href="#multiont">Download Combined Multi-species Ontology</a></li>
 </ul>
 
+<a id="releases"></a>
+<h2>Releases</h2>
+
+<p>
+Uberon is released roughly every month, depending on stakeholder
+needs. A release generates a number of different files, described
+below. Each release version of each file is stored permanently, and
+these are always available via Permanent URLs of the
+form: <pre>http://purl.obolibrary.org/obo/uberon/releases/YYYY-MM-DD</pre>
+</p>
+
+<p>
+  A description of each release, with a complete change log is available <a href="/">on front page of the uberon site</a>.
+</p>
 
 <a id="core"></a>
 <h2>Core Ontology</h2>
