--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ title: Uberon
 <div id="home">
   <h1>Uberon</h1>
   
-  New uberon website is located http://obophenotype.github.io/uberon/
+  New uberon website is located at <a href="http://obophenotype.github.io/uberon/">http://obophenotype.github.io/uberon/</a>
 
 </div>
